--- a/news/package.json
+++ b/news/package.json
@@ -9,7 +9,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.15.20",
+    "@mui/icons-material": "^5.16.0",
+    "@mui/material": "^5.16.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -25,6 +26,7 @@
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^11.2.12",
     "jquery": "^3.7.1",
+    "material-ui-popup-state": "^5.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
